--- a/src/index.html
+++ b/src/index.html
@@ -11,52 +11,20 @@
 </head>
 
 <body>
-    <div>
-        <header>
-            Bohemian Rhapsody (film)
-        </header>
-    </div>
 
-    <div>
-        <main>
-            <p>Bohemian Rhapsody is a 2018 biographical drama film about Freddie Mercury, the lead singer of the British
-                rock
-                band Queen. It was directed by Bryan Singer from a screenplay by Anthony McCarten, and produced by
-                Graham King
-                and Queen manager Jim Beach. It stars Rami Malek as Mercury, with Lucy Boynton, Gwilym Lee, Ben Hardy,
-                Joe
-                Mazzello, Aidan Gillen, Tom Hollander, Allen Leech, and Mike Myers in supporting roles. Queen members
-                Brian May
-                and Roger Taylor served as consultants. A British-American venture, the film was produced by 20th
-                Century Fox,
-                Regency Enterprises, GK Films, and Queen Films, with Fox serving as distributor. The film follows the
-                singer's
-                life from the formation of the band up to their 1985 Live Aid performance at the original Wembley
-                Stadium.</p>
+    <heading>
 
-            <p>Bohemian Rhapsody was announced in 2010, with Sacha Baron Cohen set to play Mercury. After he left the
-                project
-                in 2013 following creative differences with producers, the project languished for several years before
-                Malek was
-                cast in November 2016. Bryan Singer was the director through most of principal photography, which began
-                in
-                London in September 2017, but was fired in December 2017, for absence and clashing with the cast and
-                crew.
-                Dexter Fletcher, who was originally set to direct the film early in development, was hired to complete
-                the film,
-                although Singer retained sole director credit as per Directors Guild of America guidelines. Fletcher
-                received an
-                executive producer credit and filming concluded in January 2018.</p>
-        </main>
-    </div>
+    </heading>
 
-    <div>
-        <footer>
-            <a
-                href="https://twitter.com/freddie_mercury?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Twitter</a>
-            <a href="https://www.facebook.com/freddiemercury/">Facebook</a>
-            <a href="https://www.instagram.com/freddiemercury/">Instagram</a>
-        </footer>
+    <main>
+
+    </main>
+
+    <footer>
+        <a href="https://twitter.com/freddie_mercury?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Twitter</a>
+        <a href="https://www.facebook.com/freddiemercury/">Facebook</a>
+        <a href="https://www.instagram.com/freddiemercury/">Instagram</a>
+    </footer>
     </div>
 
 </body>
