--- a/src/news.html
+++ b/src/news.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/src/styles/news.css">
 
-    <title>Document</title>
+    <title>News</title>
 </head>
 
 <body>
@@ -27,8 +27,14 @@
         </header>
     </div>
 
-    <div>
-        <main>
+    <h1>RECENT NEWS</h1>
+
+    <div class="movie">
+        <section>
+            <h3>Bohemian Rhapsody</h3>
+            <img class="bohemian_image"
+                src="https://image-ticketfly.imgix.net/00/03/15/70/01-og.jpg?w=500&h=334&fit=crop&crop=top">
+
             <p>Bohemian Rhapsody is a 2018 biographical drama film about Freddie Mercury, the lead singer of the British
                 rock
                 band Queen. It was directed by Bryan Singer from a screenplay by Anthony McCarten, and produced by
@@ -56,8 +62,96 @@
                 the film,
                 although Singer retained sole director credit as per Directors Guild of America guidelines. Fletcher
                 received an
-                executive producer credit and filming concluded in January 2018.</p>
-        </main>
+                executive producer credit and filming concluded in January 2018.<br><br>
+
+                RUN TIME: 132 mins.</p>
+
+            <iframe width="657" height="370" src="https://www.youtube.com/embed/mP0VHJYFOAU" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </section>
+    </div>
+
+    <div class="tour">
+        <section>
+            <h3>Present Day Tours</h3>
+            <img class="tour_image"
+                src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fwww.billboard.com%2Ffiles%2Fmedia%2Fdam-Lambert-performs-live-with-Brian-May-of-Queen-2014-a-billlboard-1548.jpg">
+            <p>Following the success of the music biopic Bohemian Rhapsody, original Queen band members Brian May and
+                Roger Taylor are heading out on a 23-show tour with Adam Lambert.
+
+                The new show will push production boundaries, continuing to celebrate the innovation of Queen’s music
+                and featuring the band’s most popular hits. “We have been designing a brand new visual spectacle that
+                will reframe these iconic songs and we are excited to unveil it!” said Lambert in a statement.
+
+                The Rhapsody tour kicks off July 10 at Rogers Arena in Vancouver, BC. After cruising across the county,
+                making stops at arenas including The Forum in Los Angeles and Madison Square Garden in New York, the
+                tour will wrap up at Spectrum Center in Charlotte, N.C. on Aug. 23.
+
+                Tickets for the general public will go on sale at 10:00 a.m. local time on Dec. 7 at LiveNation.com.
+                Queen and Adam Lambert Fan Club Presales will run from 10:00 a.m. to 10:00 p.m. local time on Dec. 6.
+
+                Adam Lambert Makes a Cameo in Freddie Mercury Biopic 'Bohemian Rhapsody'
+                “Our last tour featured our most ambitious production ever, and got out best notices ever,” said
+                guitarist May. “So we decided to rip it apart and get even more ambitious! Watch out, America!"
+
+                Queen first teamed up with Lambert in 2009 during the American Idol finale and first shared a
+                full-length show with him in Ukraine alongside Elton John in 2012. Their partnership ignited, and they
+                have since performed over 180 concerts together.</p>
+
+            <p>
+
+                <em>Queen + Adam Lambert — The Rhapsody Approaches — North America Summer 2019:</em>
+
+                <ul>
+                    <li>Jul 10 -- Vancouver, BC @ Rogers Arena</li>
+
+                    <li>Jul 12 -- Tacoma, WA @ Tacoma Dome</li>
+
+                    <li>Jul 14 -- San Jose, CA @ SAP Center</li>
+
+                    <li>Jul 16 -- Phoenix, AZ @ Talking Stick Resort Arena</li>
+
+                    <li>Jul 19 -- Los Angeles, CA @ The Forum</li>
+
+                    <li>Jul 23 -- Dallas, TX @ American Airlines Center</li>
+
+                    <li>Jul 24 -- Houston, TX @ Toyota Center</li>
+
+                    <li>Jul 27 -- Detroit, MI @ Little Caesars Arena</li>
+
+                    <li>Jul 28 -- Toronto, ON @ Scotiabank Arena</li>
+
+                    <li>Jul 30 -- Washington, DC @ Capital One Arena</li>
+
+                    <li>Jul 31 -- Pittsburgh, PA @ PPG Paints Arena</li>
+
+                    <li>Aug 03 -- Philadelphia, PA @ Wells Fargo Center</li>
+
+                    <li>Aug 04 -- Boston, MA @ Xfinity Center</li>
+
+                    <li>Aug 06 -- New York, NY @ Madison Square Garden</li>
+
+                    <li>Aug 09 -- Chicago, IL @ United Center</li>
+
+                    <li>Aug 10 -- St. Paul, MN @ Xcel Energy Center</li>
+
+                    <li>Aug 13 -- Columbus, OH @ Nationwide Arena</li>
+
+                    <li>Aug 15 -- Nashville, TN @ Bridgestone Arena</li>
+
+                    <li>Aug 17 -- Ft. Lauderdale, FL @ BB&T Center</li>
+
+                    <li>Aug 18 -- Tampa, FL @ Amalie Arena</li>
+
+                    <li>Aug 20 -- New Orleans, LA @ Smoothie King Center</li>
+
+                    <li>Aug 22 -- Atlanta, GA @ State Farm Arena</li>
+
+                    <li>Aug 23 -- Charlotte, NC @ Spectrum Center</li>
+                </ul>
+            </p>
+        </section>
     </div>
 
     <div>
