added name and adjusted borders

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Freddie Mercury</title>
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/summary.css">
 </head>
@@ -25,6 +26,7 @@
         </nav>
     </header>
     <main>
+        <h1>Freddie Mercury</h1>
         <div class=img><img id=freddieKing src="images/8805501230_00d39c1c8a_o1.jpg" alt="king">
 
             <!-- <p>Freddie Mercury 'The King'</p> -->
