created the career page, made in depth changes to the layout of the images against the text

--- a/src/career.html
+++ b/src/career.html
@@ -47,7 +47,7 @@
                     <h1 class="published_title">Published Work</h1>
                     <div >
                         <img class="published_imagelist" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.vox-cdn.com%2Fthumbor%2FqUguKRx3ruz0HhUb5pgrCP5Gm8I%3D%2F0x0%3A1067x1052%2F1200x0%2Ffilters%3Afocal(0x0%3A1067x1052)%3Ano_upscale()%2Fcdn.vox-cdn.com%2Fuploads%2Fchorus_asset%2Ffile%2F13355397%2Fqueen_1973.jpeg&f=1&nofb=1" alt="Queen's first album">
-                        <img class="published_imagelist" src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.laban.rs%2Fmusic%2Fimg%2Fo%2Fo_435.jpg&f=1&nofb=1" alt="Queens second album">
+                        <img class="published_imagelist" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fen%2Fthumb%2F4%2F43%2FQueen_II_%2528album_cover%2529.jpg%2F220px-Queen_II_%2528album_cover%2529.jpg&f=1&nofb=1" alt="Queens second album">
                         <img class="published_imagelist" src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2F4.bp.blogspot.com%2F-oRsU2DpLhfM%2FTd2ZXJ2FqXI%2FAAAAAAAABjE%2FugMs0kiFWC8%2Fs1600%2FQueen%2B-%2BSheer%2BHeart%2BAttack.jpg&f=1&nofb=1" alt="Queens third album">
                     </div>
                 <p class="published_info">In 1973, Queen released their first album, titled Queen. They quickly followed up with their second album, Queen II, in 1974, which they recorded in over just one month. The album was the first taste of the group's signature harmonies and music styles, including ballads, folk, blues, metal, pop and rock, and included the single "Seven Seas of Rhye."
@@ -104,8 +104,6 @@
                     <li>US Film & Video Festival: Silver Screen Award (The Magic Years)</li>
                 </ul>
             </section>
-                
-
             </main>
 
 
@@ -119,5 +117,5 @@
                     <a href="https://www.instagram.com/freddiemercury/">Instagram</a>
                 </footer>
     
-</body>
+    </body>
 </html>
