changed main top section and fixed margins

--- a/src/personal.html
+++ b/src/personal.html
@@ -23,9 +23,8 @@
     
     <main>
         <section class="name_section">
+            <p class="name_text">Farrokh Bulsara</p>
             <img class="name_pic" src="https://i.pinimg.com/474x/1f/5d/22/1f5d2278120d6e8de8ac74fee42a70d6--queen-freddie-mercury-killer-queen.jpg"/>
-
-            <p class="name_text"> Birth Name: Farrokh Bulsara <br> Stage Name: Freddie Mercury</p>
 
         </section>  
 
